# urban-notes

./: Cargo.toml  README.md
jsx/: README.md  com.urban_notes.agent.plist  gulpfile.js  notes.jxa  package-lock.json  package.json
jsx/src/: _bootstrap.js  args.js  args.test.js  clients.js  config.js  main.js  notes.js  parse.js  parse.test.js  process.js  process.test.js  sign.js  sign.test.js
server/: Cargo.toml  Cross.toml  Rocket.toml  docker-compose.yml  schema.sql
server/src/: anydo.rs  config.rs  lib.rs  main.rs  sync_todos.rs  todos.rs  token.rs
server/src/storage/: cursors.rs  mod.rs  todos.rs
src/: main.rs
